test/sema/typeck/pattern/struct-named-no-args.dora
struct Foo { a: Int, b: Int }
fn f(x: Foo): Int {
    let Foo = x;
    0
}
